fix: scrollbars

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,8 +23,8 @@ mat-sidenav-container {
   }
 }
 
-:host ::ng-deep .mat-drawer-inner-container {
-  @include scrollY();
+::ng-deep .mat-drawer-inner-container {
+  @include scrollYImportant();
 }
 
 mat-drawer {
